<resources>
    <string name="app_name">Assignment_3</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="pincode">PinCode</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="interest">Interest</string>
    <string name="profile">Profile</string>
    <string name="experience">Experience</string>
    <string name="Details">Details</string>
</resources>