<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#880E4F"
    android:gravity="center">
        <TextView
            android:id="@+id/DisplayTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:text="@string/name"
            android:gravity="center"
            android:background="@color/editBox"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/DisplayTxtDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:text="@string/date_of_birth"
            android:gravity="center"
            android:background="@color/editBox"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/DisplayTxtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:text="@string/address"
            android:gravity="center"
            android:background="@color/editBox"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/DisplayTxtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:text="@string/city"
            android:gravity="center"
            android:background="@color/editBox"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/DisplayTxtPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:text="@string/pincode"
            android:gravity="center"
            android:background="@color/editBox"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/DisplayTxtMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:text="@string/mobile_number"
            android:gravity="center"
            android:background="@color/editBox"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/DisplayTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:text="@string/email_id"
            android:gravity="center"
            android:background="@color/editBox"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/DisplayTxtInterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:text="@string/interest"
            android:gravity="center"
            android:background="@color/editBox"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/DisplayTxtProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:gravity="center"
            android:background="@color/editBox"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/DisplayTxtExperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:text="@string/experience"
            android:gravity="center"
            android:background="@color/editBox"
            android:textColor="#000000"/>
    </LinearLayout>