<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#880E4F">
        <EditText
            android:id="@+id/editTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:hint="@string/name"
            android:gravity="center"
            android:background="@color/editBox"
            android:inputType="textPersonName"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/editTxtDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:hint="@string/date_of_birth"
            android:gravity="center"
            android:background="@color/editBox"
            android:inputType="textPersonName"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/editTxtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:hint="@string/address"
            android:gravity="center"
            android:background="@color/editBox"
            android:inputType="textPersonName"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/editTxtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:hint="@string/city"
            android:gravity="center"
            android:background="@color/editBox"
            android:inputType="textPersonName"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/editTxtPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:hint="@string/pincode"
            android:gravity="center"
            android:background="@color/editBox"
            android:inputType="textPersonName"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/editTxtMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:hint="@string/mobile_number"
            android:gravity="center"
            android:background="@color/editBox"
            android:inputType="textPersonName"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/editTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:hint="@string/email_id"
            android:gravity="center"
            android:background="@color/editBox"
            android:inputType="textPersonName"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/editTxtInterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:hint="@string/interest"
            android:gravity="center"
            android:background="@color/editBox"
            android:inputType="textPersonName"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/editTxtProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:hint="@string/profile"
            android:gravity="center"
            android:background="@color/editBox"
            android:inputType="textPersonName"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/editTxtExperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:hint="@string/experience"
            android:gravity="center"
            android:background="@color/editBox"
            android:inputType="textPersonName"
            android:textColor="#000000"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:text="REGISTER"
            android:onClick="onBtnClick"
            android:textColor="#000000"
            android:background="#64B5F6"/>
    </LinearLayout>
</ScrollView>